# usd-selfpack

./: .gitignore  README.md  pyproject.toml
docs/: index.md
docs/debug_sessions/: index.md
docs/debug_sessions/2025-12-25-mdl-materials-packaging/: attempts.md
docs/debug_sessions/2025-12-25_033924-next-steps/: index.md  plan.md
docs/debug_sessions/2025-12-25_045230-fix-mdl-sourceasset/: index.md  report.md
docs/debug_sessions/2025-12-25_prim-verify-and-render-diff/: index.md
docs/design/: flatten.md  glb.md  rewrite.md  scanner.md
docs/devnotes/: 2025-12-24-packager.md  2025-12-25-flex_task1_cookie_selfpack_debug.md
docs/ops/: isaac_env.md  troubleshooting.md
docs/overview/: architecture.md  business_flow.md  infrastructure.md  interfaces.md  quality_assessment.md  tech_stack.md
docs/release/: changelog.md
docs/usage/: cli.md  workflow.md
output/task9/: report.json  scene.usd
scripts/: capture_ui_open_log.sh  check_mdl_refs.py  check_stage_missing_assets.py  check_stage_open_warnings_kit.py  compare_prim_materials.py  compare_usd_prims.py  compare_usd_prims_kit.py  convert_glb_to_usd.py  dump_usd_prim.py  inspect_prim_mdl_bindings.py  inspect_usd_assetpaths_summary.py  inspect_usd_mdl_assetpaths.py  isaac_python.sh  launch_isaac_with_env.sh  mesh2usd.py  open_in_isaac_ui.sh  pack_usd.py  render_one_frame.py  scan_kit_log_mdl_errors.py  trace_usd_attr_stack.py  validate_prim_relative_deps.py
src/usd_asset_packager/: __init__.py  cli.py  converter.py  copy_utils.py  glb.py  mdl.py  packager.py  report.py  resolver.py  rewrite.py  scan.py  types.py
(+15 files in other folders)
